# convert-markmonitor-domain-list-to-mozilla

./: README.md  pyproject.toml
convert_markmonitor_domain_list_to_mozilla/: __init__.py
