[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convert_markmonitor_domain_list_to_mozilla"
authors = [
    {name = "Gene Wood", email = "gene_wood@cementhorizon.com"},
]
description = "Tool to convert a MarkMonitor domain export xls file into a JSON file for use with other Mozilla tools"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MPL-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats :: JSON",
    "Topic :: Internet :: Name Service (DNS)"
]
dependencies = [
    "xlrd"
]
dynamic = ["version"]

[project.scripts]
my-script = "my_package.module:function"
convert-markmonitor-domain-list-to-mozilla = "convert_markmonitor_domain_list_to_mozilla:main"

[project.urls]
Documentation = "https://github.com/gene1wood/convert-markmonitor-domain-list-to-mozilla/README.md"
"Source code" = "https://github.com/gene1wood/convert-markmonitor-domain-list-to-mozilla/"

[tool.hatch.version]
path = "convert_markmonitor_domain_list_to_mozilla/__about__.py"
